# osu-ranker

./: Cargo.toml  ranker.py  readme.md
models/: ranker.stan  ranker_complicated.stan
src/: main.rs
